# create_Ntuple_ForNSW

./: .gitignore
prod/: RUN3_data.list  RUN3_l2mt_0821.list  SelfTrigReprocess_AOD.list  submit.py
source/: CMakeLists.txt  package_filters.txt
source/MyAnalysis/: CMakeLists.txt
source/MyAnalysis/MyAnalysis/: MyxAODAnalysis.h  selection.xml
source/MyAnalysis/Root/: MyxAODAnalysis.cxx
source/MyAnalysis/share/: ATestRun_eljob.py  ATestRun_jobOptions.py
